Fixed background image size
Previously, if the content was short, the background image would not cover the entire screen.
Now this issue is fixed by resizing the body to 100%.

--- a/styles_index.css
+++ b/styles_index.css
@@ -58,6 +58,7 @@ div ul ol li{
 }
 
 body {
+    height: 100%;
     background-image: url("/Pictures/IMG_20251205_165554255_HDR.jpg");
     background-repeat: no-repeat;
     background-position: center;
