--- a/styles_projects.css
+++ b/styles_projects.css
@@ -40,6 +40,7 @@ span{
 }
 
 body {
+    height: 100%;
     background-image: url("/Pictures/projects_back.jpg");
     background-repeat: no-repeat;
     background-position: center;
